@@ -2,6 +2,9 @@ Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 
 {{ $NEXT }}
 
+- Added REST and RPC delete_bulk tests
+- Fixed RPC delete_bulk not working at all
+
 2.002002  2010-08-03 14:40:50 Europe/Vienna
 
 - Fixed search for related columns overwriting existing params in generate_column_parameters
